@@ -17,7 +17,7 @@ buildscript{
     }
 
     dependencies{
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.8'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
         classpath "com.github.anuken:packr:-SNAPSHOT"
         classpath "com.github.Anuken.Arc:packer:$arcHash"
         classpath "com.github.Anuken.Arc:arc-core:$arcHash"
@@ -32,11 +32,11 @@ allprojects{
 
     ext{
         versionNumber = '6'
-        if(!project.hasProperty("versionModifier")) versionModifier = 'alpha'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'release'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '891ed912791e01fe9ee6237a6497e5212b85c256'
-        rhinoVersion = '8437435dab9993769d72739608580d40c5343285'
+        rhinoVersion = '2617981f706e50b8753155d8e15e326308be3b22'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -83,6 +83,10 @@ allprojects{
             return "v$buildVersion"
         }
 
+        hasSprites = {
+            return new File(rootDir, "core/assets/sprites/sprites.atlas").exists()
+        }
+
         getModifierString = {
             if(versionModifier != "release"){
                 return "[${versionModifier.toUpperCase()}]"
@@ -97,6 +101,17 @@ allprojects{
 
         getPackage = {
             return project.ext.mainClassName.substring(0, project.ext.mainClassName.indexOf("desktop") - 1)
+        }
+
+        findSdkDir = {
+            //null because IntelliJ doesn't get env variables
+            def v = System.getenv("ANDROID_HOME")
+            if(v != null) return v
+            //rootDir is null here, amazing. brilliant.
+            def file = new File("local.properties")
+            if(!file.exists()) file = new File("../local.properties")
+            def props = new Properties().with{p -> p.load(file.newReader()); return p }
+            return props.get("sdk.dir")
         }
 
         generateLocales = {
@@ -172,24 +187,48 @@ allprojects{
         jcenter()
     }
 
+    task clearCache{
+        doFirst{
+            delete{
+                delete "$rootDir/core/assets/cache"
+            }
+        }
+    }
+
     tasks.withType(JavaCompile){
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        targetCompatibility = 8
+        sourceCompatibility = 14
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
+        dependsOn clearCache
     }
 }
 
-//compile with java 8 compatibility for everything except the annotati project
+configure(project(":annotations")){
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+    }
+}
+
+//compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
         if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8'])
+            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+        }
+
+        doFirst{
+            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
         }
     }
 
     tasks.withType(Javadoc){
-       options.addStringOption('Xdoclint:none', '-quiet')
+        options{
+            addStringOption('Xdoclint:none', '-quiet')
+            addBooleanOption('-enable-preview', true)
+            addStringOption('-release', '14')
+        }
     }
 }
 
@@ -200,7 +239,6 @@ project(":desktop"){
 
     dependencies{
         implementation project(":core")
-        implementation arcModule("natives:natives-box2d-desktop")
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
         implementation 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'
@@ -219,18 +257,22 @@ project(":ios"){
 
     task incrementConfig{
         def vfile = file('robovm.properties')
+        def bversion = getBuildVersion()
         def props = new Properties()
         if(vfile.exists()){
             props.load(new FileInputStream(vfile))
         }else{
             props['app.id'] = 'io.anuke.mindustry'
-            props['app.version'] = '5.0'
+            props['app.version'] = '6.0'
             props['app.mainclass'] = 'mindustry.IOSLauncher'
             props['app.executable'] = 'IOSLauncher'
             props['app.name'] = 'Mindustry'
         }
         
         props['app.build'] = (!props.containsKey("app.build") ? 40 : props['app.build'].toInteger() + 1) + ""
+        if(bversion != "custom build"){
+            props['app.version'] = versionNumber + "." + bversion + (bversion.contains(".") ? "" : ".0")
+        }
         props.store(vfile.newWriter(), null)
     }
 
@@ -239,7 +281,6 @@ project(":ios"){
 
         implementation arcModule("natives:natives-ios")
         implementation arcModule("natives:natives-freetype-ios")
-        implementation arcModule("natives:natives-box2d-ios")
         implementation arcModule("backends:backend-robovm")
 
         compileOnly project(":annotations")
@@ -248,6 +289,8 @@ project(":ios"){
 
 project(":core"){
     apply plugin: "java-library"
+
+    compileJava.options.fork = true
 
     task preGen{
         outputs.upToDateWhen{ false }
@@ -262,9 +305,10 @@ project(":core"){
             def props = loadVersionProps()
             def androidVersion = props['androidBuildCode'].toInteger() - 2
             def loglines = file("../changelog").text.split("\n")
+            def notice = "[This is a truncated changelog, see Github for full notes]"
             def maxLength = 460
 
-            def androidLogList = loglines.findAll{ line -> !line.endsWith("]") || line.endsWith("[Mobile]") || line.endsWith("[Android]")}
+            def androidLogList = [notice] + loglines.findAll{ line -> !line.endsWith("]") || line.endsWith("[Mobile]") || line.endsWith("[Android]")}
             def result = ""
             androidLogList.forEach{line ->
                 if(result.length() + line.length() + 1 < maxLength){
@@ -282,7 +326,6 @@ project(":core"){
         api "org.lz4:lz4-java:1.4.1"
         api arcModule("arc-core")
         api arcModule("extensions:freetype")
-        api arcModule("extensions:box2d")
         api arcModule("extensions:g3d")
         api arcModule("extensions:fx")
         api arcModule("extensions:arcnet")
@@ -291,6 +334,8 @@ project(":core"){
 
         compileOnly project(":annotations")
         annotationProcessor project(":annotations")
+        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+
     }
 }
 
@@ -299,7 +344,6 @@ project(":server"){
 
     dependencies{
         implementation project(":core")
-        implementation arcModule("natives:natives-box2d-desktop")
         implementation arcModule("backends:backend-headless")
     }
 }
@@ -312,7 +356,6 @@ project(":tests"){
         testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
         testImplementation arcModule("backends:backend-headless")
-        testImplementation arcModule("natives:natives-box2d-desktop")
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
     }
 
@@ -334,7 +377,6 @@ project(":tools"){
 
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
-        implementation arcModule("natives:natives-box2d-desktop")
         implementation arcModule("backends:backend-headless")
     }
 }
@@ -345,7 +387,6 @@ project(":annotations"){
     dependencies{
         implementation 'com.squareup:javapoet:1.12.1'
         implementation "com.github.Anuken.Arc:arc-core:$arcHash"
-        implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
     }
 }
 
